Fixed styling and resizability of the grid.
Added the styling rules for xs screens.
Also made the grid static.

--- a/styles/main.less
+++ b/styles/main.less
@@ -1,6 +1,15 @@
 @import "bootstrap";
 body{
-    padding: 10px;
+    margin: 10px;
+    .row {
+        margin-right: -10px;
+    }
+}
+.controls{
+    margin-bottom: 10px;
+    .btn-group{
+        margin-right: 10px;
+    }
 }
 .list-group{
     font-size: 12px;
@@ -18,8 +27,6 @@ body{
     span {
         cursor: pointer;
     }
-    .button-group{
-    }
     & > [class*="col-xs-"]{
         padding-left: 0;
         padding-right: 0;
@@ -35,8 +42,8 @@ body{
     border: 1px solid #AFB2B5;
     background:#F8FAFB;
     .button-group{
-        bottom: 5px;
-        right: 5px;
+        bottom: 10px;
+        right: 10px;
         position: absolute;
 
     }
