--- a/css/main.css
+++ b/css/main.css
@@ -6695,8 +6695,68 @@ button.close {
     display: none !important;
   }
 }
+.alerts {
+  position: fixed;
+  z-index: 1001;
+  left: 50%;
+  top: 10%;
+  max-width: 75%;
+  min-width: 25%;
+}
+.alerts .alert {
+  position: relative;
+  left: -50%;
+  box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.1);
+}
+.alerts .alert > p {
+  display: inline-block;
+  padding: 0 24px 0 35px;
+  line-height: 25px;
+}
+.alerts .alert > span {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  line-height: 25px;
+}
+.alerts .alert:before {
+  font-family: 'FontAwesome';
+  line-height: 1;
+  font-size: 18px;
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  border-width: 2px;
+  border-style: solid;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  line-height: 25px;
+  border-radius: 50%;
+}
+.alerts .alert.alert-danger:before {
+  content: '\f12a';
+}
+.alerts .alert.alert-success:before {
+  content: '\f00c';
+}
+.alerts .alert.alert-info:before {
+  content: '\f128';
+}
+.alerts .alert.alert-warning:before {
+  content: '\f12a';
+}
 body {
-  padding: 10px;
+  margin: 10px;
+}
+body .row {
+  margin-right: -10px;
+}
+.controls {
+  margin-bottom: 10px;
+}
+.controls .btn-group {
+  margin-right: 10px;
 }
 .list-group {
   font-size: 12px;
@@ -6727,8 +6787,8 @@ body {
   background: #F8FAFB;
 }
 .react-grid-item .button-group {
-  bottom: 5px;
-  right: 5px;
+  bottom: 10px;
+  right: 10px;
   position: absolute;
 }
 .period-row {
