--- a/styles/main.less
+++ b/styles/main.less
@@ -7,12 +7,7 @@ body{
         margin-right: -10px;
     }
 }
-.controls{
-    margin-bottom: 10px;
-    .btn-group{
-        margin-right: 10px;
-    }
-}
+
 .list-group{
     font-size: 12px;
     .form-group{
@@ -56,4 +51,12 @@ body{
 
 .fa-info-circle{
     cursor: pointer;
+}
+
+.header{
+    border-bottom: 1px solid #E5E5E5;
+    margin-bottom: 10px;
+    .controls .btn-group{
+        margin-right: 10px;
+    }
 }
