Updates all dependencies
Renamed scripts to src.
Moved styles from root to src
Tried bootstrap4 with sass and the gulp necessary task and packages. But
that didnot work out because the migration took too much effort and
react-bootstrap uses bootstrap3

Most significant updates are:
Updated lodash to v4
Updated react to v15

Using gulpfile.babel.js to use es6 syntax in gulpfile

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,5 +1,5 @@
 @import "bootstrap";
-@import "notifications.less";
+@import "notifications";
 
 body{
     margin: 10px;
@@ -62,4 +62,14 @@ body{
     .help{
         text-align: center;
     }
+}
+
+.fa-info-circle.fa-lg{
+    font-size: 1.6em;
+    line-height: 1em;
+    vertical-align: -22%;
+}
+
+.label-pill{
+    font-size: 12px;
 }
