--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -18,6 +18,7 @@ body{
     }
 }
 .list-group-item{
+    padding: 8px 10px;
     .fa-chevron-down, .fa-chevron-right{
         margin-right: 5px;
     }
@@ -70,6 +71,7 @@ body{
     vertical-align: -20%;
 }
 
-.label-pill{
+.badge{
     font-size: 12px;
+    border-radius: .25em;
 }
