--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -8,6 +8,10 @@ body{
     }
 }
 
+.sidebar{
+    padding-right: 0;
+}
+
 .list-group{
     font-size: 12px;
     .form-group{
@@ -71,7 +75,8 @@ body{
     vertical-align: -20%;
 }
 
-.badge{
+.panel-default > .panel-heading .badge, .badge{
+    background-color: #777777;
     font-size: 12px;
     border-radius: .25em;
 }
