--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -34,7 +34,14 @@ body{
         padding-right: 0;
     }
 }
-
+.panel-body {
+    padding: 0;
+    .list-item{
+        margin: 0 -1px -1px -1px;
+        padding: 8px 10px;
+        border: 1px solid #ddd;
+    }
+}
 .button-group > * {
     margin-left: 10px;
 }
@@ -79,4 +86,23 @@ body{
     background-color: #777777;
     font-size: 12px;
     border-radius: .25em;
+}
+.empty{
+    display: block;
+    margin: 20px 20px;
+}
+.panel-title{
+    .row();
+    margin-left:0;
+    margin-right:0;
+    hr{
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    [class^="col-"]{
+        padding-left: 0;
+    }
+    .option{
+        font-size:12px;
+    }
 }
