Added the generate ipf form it will open a modal and give an overview of all the sorted courses by the user. The print does not work 100%, it still breaks the divs at the end of the page break

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,6 +1,7 @@
 @import "bootstrap";
 @import "notifications";
-
+@import "print";
+@import "isp-form";
 body{
     margin: 10px;
     .row {
@@ -11,7 +12,9 @@ body{
 .sidebar{
     padding-right: 0;
 }
-
+.text-bold{
+    font-weight: bold;
+}
 .list-group{
     font-size: 12px;
     .form-group{
