--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -2,6 +2,8 @@
 @import "notifications";
 @import "print";
 @import "isp-form";
+@import "select-view";
+
 body{
     margin: 10px;
     .row {
@@ -38,7 +40,7 @@ body{
     }
 }
 .panel-body {
-    padding: 0;
+    // padding: 0;
     .list-item{
         margin: 0 -1px -1px -1px;
         padding: 8px 10px;
@@ -91,6 +93,7 @@ body{
     border-radius: .25em;
 }
 .empty{
+    text-align: center;
     display: block;
     margin: 20px 20px;
 }
