Added filter on the unlisted ispfield
You can search through all the selected courses

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -120,7 +120,7 @@ body{
 .fa + .fa{
     margin-left: 5px;
 }
-.fa-info-circle, .fa-undo{
+.fa-info-circle, .fa-undo, .fa-search{
     cursor: pointer;
 }
 .fa-undo{
