Splitted ISPPanel The ISPPanel is now splitted in isppanelheader and body to make it easier to maintain

--- a/src/styles/select-view.less
+++ b/src/styles/select-view.less
@@ -5,4 +5,8 @@
     .item-hovering .panel{
         border:2px dotted #AFB2B5;
     }
+    hr{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
 }
