Some code clean up. Added sumEcts, styled the select view
Styled the exclamation mark in the isp fields and the generate button
The pretty errors will now be given by ISPFieldModel instead of
generating it at ISPPanelHeader

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -12,7 +12,7 @@ body{
     }
 }
 .has-error{
-    color:red;
+    .text-danger();
     font-weight: bold;
 }
 .sidebar{
@@ -126,9 +126,12 @@ body{
 .fa + .fa{
     margin-left: 5px;
 }
-.fa-info-circle, .fa-undo, .fa-search{
+.fa-info-circle, .fa-undo, .fa-search, .fa-exclamation-triangle{
     cursor: pointer;
 }
 .fa-undo{
     margin-top: 4px;
+}
+.fa-exclamation-triangle {
+    color: #D7E100;
 }
