Updated todos, added grip icon in the coursednd
The grip icon should make it more obviousier that it is draggable

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -133,3 +133,7 @@ body{
 .fa-exclamation-triangle {
     color: #D7E100;
 }
+.fa.fa-grip:before {
+    content: "\f142 \202F \f142 \202F";
+    color: #777777;
+}
