If a group restriction is not met it will show the error msg
On a coursednd if a group restriction is not met placed by the ispmodel
which is placed in it will show an error, indicating what is wrong.

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -137,3 +137,12 @@ body{
     content: "\f142 \202F \f142 \202F";
     color: #777777;
 }
+ul.compact {
+    margin: 0;
+    padding-left: 15px;
+    text-align: left;
+    & > li {
+        margin: 0;
+        padding: 0;
+    }
+}
